--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 
 # ignore secret environment variable values in the ".env" file:
 .env
+
+# ignore files created by pytest
+__pycache__
+.pytest_cache
+
+# ignore temporary files created during the testing process
+test/example_reports/temp_prices.csv
